--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                C182 160 190 164 190 170
                C190 164 198 160 198 152
                C198 148 194 144 190 144Z"
-fill="#ff7aa2"/>
+            fill="#ff7aa2"/>
     </svg>
 
     <h1>nirali will you be my valentine?</h1>
@@ -247,7 +247,7 @@ fill="#ff7aa2"/>
     let yesScale = 1;
     function growYes() {
       yesScale = Math.min(2.2, yesScale + 0.1);
-      yesBtn.style.transform = translateY(-50%) scale(${yesScale});
+      yesBtn.style.transform = `translateY(-50%) scale(${yesScale})`;
     }
 
     /* ---------- NO BUTTON RUNS AWAY ---------- */
@@ -300,4 +300,5 @@ fill="#ff7aa2"/>
   </script>
 </body>
 </html>
+
 
